--- a/Web/index.html
+++ b/Web/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>main</title>
+    <link rel="shortcut icon" href="src/assets/MephiIcon.png" />
+    <title>Study Bot</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </body>
 </html>
